<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HelloWorld</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world"> Welcome Saurabh</string>
    <string name="notification_world">Android Notification Example</string>
    <string name="google_analyatics_example">Google Analyatics Example</string>
    <string name="notification_example">Notification Example</string>
    <string name="info"> First Screen</string>
    <string name="track_event">Track Event</string>
    <string name="track_crash">Track Crash</string>
    <string name="second_screen">Second Screen</string>
    <string name="third_screen">Welcome Saurabh!!!</string>
    <string name="notification_basic_example">Basic Notification</string>
    <string name="notification_bigtext_example">BigText Notification</string>
    <string name="notification_bigpic_example">BigPic Notification</string>
    <string name="notification_inbox_example">Inbox Notification</string>

</resources>